samples/_failures_safe/1761517001_84ed28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9654960.c: In function ‘main’:
./samples/SAFE/__tmp_a9654960.c:155:20: error: expected ‘;’ at end of input
  155 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_a9654960.c:155:9: error: expected declaration or statement at end of input
  155 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_a9654960.c:155:9: error: expected declaration or statement at end of input
